--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
           <li class="nav-item">
-            <button id="toggleTheme" class="btn btn-sm btn-outline-primary ms-3"> <button id="toggleTheme" class="btn btn-sm btn-outline-primary ms-3"></button>
+            <button id="toggleTheme" class="btn btn-sm btn-outline-primary ms-3">🌙</button>
 
           </li>
         </ul>
@@ -33,12 +33,12 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="hero d-flex align-items-center text-center text-white" id="hero"><button id="toggleTheme" class="btn btn-sm btn-outline-danger ms-3">🌙</button>
+  <section class="hero d-flex align-items-center text-center text-white" id="hero">
     <div class="container">
       <h1 class="display-4 fw-bold">Hi, I'm Etchi Franca Ketchen</h1>
       <p class="lead">A Student In Full Stalk Development</p>
       <a href="#contact" class="btn btn-warning btn-lg mt-3">Let's Connect</a>
-      <a href="#contact" class="btn btn-warning btn-lg mt-3">Download CV</a>
+      <a href="mycv.pdf" class="btn btn-warning btn-lg mt-3"download="mycv.pdf">Download CV</a>
     </div>
   </section>
 
@@ -194,13 +194,13 @@
         <a href="https://linkedin.com/in/your-profile" target="_blank" class="text-white text-decoration-none">
           <i class="bi bi-linkedin"></i> LinkedIn
         </a>
-        <a href="https://github.com/your-profile" target="_blank" class="text-white text-decoration-none">
+        <a href="https://github.com/etchi43franca" target="_blank" class="text-white text-decoration-none">
           <i class="bi bi-github"></i> GitHub
         </a>
         <a href="mailto:youremail@example.com" class="text-white text-decoration-none">
           <i class="bi bi-envelope"></i> Email
         </a>
-        <a href="https://wa.me/1234567890" target="_blank" class="text-white text-decoration-none">
+        <a href="https://wa.me/qr/4NFSLRVNJHC4K1target" class="text-white text-decoration-none">
           <i class="bi bi-whatsapp"></i> WhatsApp
         </a>
       </div>
